# l293x

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: dependabot.yml
.github/actions/audit/: action.yml
.github/actions/build_and_test/: action.yml
.github/actions/msrv/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml  publish.yml
examples/esp32-motor/: Cargo.toml  build.rs
examples/esp32-motor/.cargo/: config.toml
examples/esp32-motor/src/: main.rs
scripts/: release.sh
src/: bridge.rs  half_h.rs  l293x.rs  lib.rs  mock.rs  output_state_error.rs  pins.rs  shared_pin.rs
