[package]
name = "l293x"
version = "0.2.0"
description = "Platform agnostic library for the L293 and L293D motor drivers using embedded-hal"
authors = ["hansingt"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["L293", "L293D", "embedded-hal", "embedded-hal-driver", "hal"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hansingt/l293x"
repository = "https://github.com/hansingt/l293x"
edition = "2021"
rust-version = "1.60"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "src/**",
]

[lib]
doctest = false

[dependencies]
embedded-hal = {version = "1.0.0" }
paste = { version = "1.0.15" }

[dev-dependencies]
coverage-helper = { version = "0.2.2" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(coverage_nightly)"] }
